*REFACTORING* limit & offset, responses in comment, post, profile controllers
